<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="launch_logo_description">This is a logo in Fragment launch</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="representative">Find My Representations</string>

    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>

    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding address</string>
    <string name="follow_button">Follow Election</string>
    <string name="unfollow_button">Unfollow Election</string>

    <string name="profile">Profile</string>
    <string name="error_upcoming_election">Can not retrieve upcoming election</string>

    <string name="location_permission_explain">Location permission is required.</string>
    <string name="settings">Settings</string>



</resources>
